# ---------------------------------------------------------------------------
# tests/unit/CMakeLists.txt
# Unit tests for OpenSafetyRTOS — compiled for host (not cross-compiled).
#
# Phase 0 stub: no test sources yet. Add test executables here as:
#
#   add_executable(test_scheduler test_scheduler.c)
#   target_link_libraries(test_scheduler PRIVATE opensafety_kernel)
#   add_test(NAME scheduler COMMAND test_scheduler)
# ---------------------------------------------------------------------------

message(STATUS "Unit tests: no sources yet (Phase 0 stub)")
